# barry

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.osync  Changelog  DEPUTY  Doxyfile  Doxyfile.in  Exceptions  Hacking  KnownBugs  Makefile  Makefile.am  Makefile.conf  Makefile.in  NEWS  README  TODO  Todo  aclocal.m4  add-desktop.sh  add-gui.sh  add-os22.sh  add-os4x.sh  barry-0.14.tar.bz2.delta  barry-0.14.tar.bz2.id  barry-0.15.tar.bz2.delta  barry-0.15.tar.bz2.id  barry-0.16.tar.bz2.delta  barry-0.16.tar.bz2.id  barry-0.17.0.tar.bz2.delta  barry-0.17.0.tar.bz2.id  barry_0.14.orig.tar.gz.delta  barry_0.14.orig.tar.gz.id  barry_0.15.orig.tar.gz.delta  barry_0.15.orig.tar.gz.id  barry_0.16.orig.tar.gz.delta  barry_0.16.orig.tar.gz.id  barry_0.17.0.orig.tar.gz.delta  barry_0.17.0.orig.tar.gz.id  (+36 more)
bjdwp/: CMakeLists.txt
bjdwp/doc/: README  jdwp-class.txt
bjdwp/sample/: BarryDemo.debug  build.sh
bjdwp/src/: CMakeLists.txt  data.cc  data.h  debug.h  handler.cc  jdwp.cc  jdwp.h  manager.cc  message.cc  message.h  protocol.h  server.cc
bjdwp/tools/: CMakeLists.txt  main.cc
bjdwp/utils/: CMakeLists.txt  codinfo.cc  main.cc  parser.cc
desktop/: AUTHORS  ChangeLog  Makefile.am  README  TODO  buildgen.sh  configure.ac
desktop/doc/: DesktopPlan.txt  apple-darwin9.txt
desktop/images/: MainButtons.xcf  Makefile.am  README  background.xcf  backuprestore-focus.xcf  backuprestore-normal.xcf  backuprestore-pushed.xcf  barry_logo_icon.xpm  logo_NetDirect.xpm  scanning.xcf
desktop/man/: Makefile.am  barrydesktop.1
desktop/po/: ChangeLog  Makevars  POTFILES.in  README  barrydesktop.pot  es.po  fr.po
desktop/po-osyncwrap/: Makevars  POTFILES.in  README  barryosyncwrap.pot  es.po  fr.po
desktop/src/: BaseButtons.cc  BaseButtons.h  BaseFrame.cc  BaseFrame.h  CUI_Barry.cc  CUI_Barry.h  CUI_Evolution.cc  CUI_Evolution.h  CUI_Google.cc  CUI_Google.h  CUI_KDEPim.cc  CUI_KDEPim.h  CalendarEditDlg.cc  CalendarEditDlg.h  CalendarEditDlg.wxg  ClickImage.cc  ClickImage.h  ConflictDlg.cc  ConflictDlg.h  ContactEditDlg.cc  ContactEditDlg.h  ContactEditDlg.wxg  ContactPhotoWidget.cc  ContactPhotoWidget.h  EasyCondition.h  EvoCfgDlg.cc  EvoCfgDlg.h  EvoDefaultDlg.cc  EvoDefaultDlg.h  EvoSources.cc  EvoSources.h  GroupCfgDlg.cc  GroupCfgDlg.h  Makefile.am  MemoEditDlg.cc  MemoEditDlg.h  MemoEditDlg.wxg  MigrateDlg.cc  MigrateDlg.h  MimeExportDlg.cc  (+75 more)
desktop/src/0.22/: Makefile.am  xmlmap
examples/: Makefile.am  Makefile.in  addcalendar.cc  addcontact.cc  addmemo.cc  dbdump.cc  pipedump.cc  usbclient.cc
gui/: ABOUT-NLS  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  buildgen.sh  config.h.in  configure  configure.ac
gui/man/: Makefile.am  Makefile.in  barrybackup.1
gui/po/: ChangeLog  LINGUAS  POTFILES.in  README  barry-backup.pot  es.po  fr.po
gui/src/: BackupWindow.cc  BackupWindow.glade  BackupWindow.h  ConfigDlg.cc  ConfigDlg.glade  ConfigDlg.h  ConfigFile.cc  ConfigFile.h  DatabaseSelectDlg.cc  DatabaseSelectDlg.glade  DatabaseSelectDlg.h  DeviceBus.cc  DeviceBus.h  DeviceIface.cc  DeviceIface.h  DeviceSelectDlg.cc  DeviceSelectDlg.glade  DeviceSelectDlg.h  Makefile.am  Makefile.in  PasswordDlg.cc  PasswordDlg.glade  PasswordDlg.h  Pin.cc  Pin.h  PromptDlg.cc  PromptDlg.glade  PromptDlg.h  Thread.cc  Thread.h  aboutdialog.cc  aboutdialog.h  barry-gui.glade  i18n.h  main.cc  tarfile-ops-nt.cc  tarfile.cc  tarfile.h  util.cc  util.h
opensync-plugin/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  buildgen.sh  configure  configure.ac  configure.in
opensync-plugin-0.4x/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  buildgen.sh  configure  configure.ac
opensync-plugin-0.4x/debian/: changelog  control  copyright  opensync-plugin-barry-4x-dbg.install  opensync-plugin-barry-4x.install  opensync1-plugin-barry.install  rules
opensync-plugin-0.4x/patches/: kitchensync-svn-20070712-enable.patch  libopensync-plugin-evolution2-0.22-file-path-fudge.patch
opensync-plugin-0.4x/po/: ChangeLog  POTFILES.in  barry-opensync-plugin-0-4x.pot  es.po  fr.po
opensync-plugin-0.4x/src/: Makefile.am  Makefile.in  barry-sync  barry_sync.cc  barry_sync.h  environment.cc  environment.h  format_check.h  i18n.h  idmap.h  tosserror.h  trace.h  vbase.cc  vbase.h  vcard.cc  vcard.h  vevent.cc  vevent.h  vformat.c  vjournal.cc  vjournal.h  vtodo.cc  vtodo.h
opensync-plugin/debian/: changelog  control  copyright  opensync0-plugin-barry.install  rules
opensync-plugin/patches/: README
opensync-plugin/po/: Makevars  POTFILES.in  README  barry-opensync-plugin.pot  es.po  fr.po
opensync-plugin/src/: Makefile.am  Makefile.in  barry-config  barry-sync  barry_sync.cc  barry_sync.h  environment.cc  environment.h  error.cc  error.h  event_converter.cc  event_converter.h  fsmartptr.h  i18n.h  idmap.cc  idmap.h  trace.cc  trace.h  vbase.cc  vbase.h  vcard.cc  vcard.h  vevent.cc  vevent.h  vformat.c  vformat.h
src/: .cvsignore  Doxyfile  Makefile  Makefile.am  Makefile.in  README  a_alxparser.cc  a_alxparser.h  a_application.cc  a_application.h  a_codsection.cc  a_codsection.h  a_common.h  a_library.cc  a_library.h  a_osloader.cc  a_osloader.h  backup.cc  backup.h  barry.h  barryalx.h  barrybackup.h  barrysync.h  base64.cc  base64.h  bbtool.cc  blackberry.cc  blackberry.h  bmp-internal.h  bmp.cc  bmp.h  btool.cc  builder.cc  builder.h  cbarry.h  clog.h  cod-internal.h  cod.cc  cod.h  common.cc  (+184 more)
test/: Makefile.am  buildtest.sh  data.cc  date.cc  fhbuild.cc  libtest.cc  libtest.h  nightly.sh  ptyio.cc
tools/: Makefile.am  Makefile.in  Makefile.plain  balxparse.cc  barrygetopt.h  bcharge.cc  bcharge_libusb_1_0.cc  bdptest.cc  bfuse.cc  bidentify.cc  bio.cc  bjavadebug.cc  bjavaloader.cc  bjdwp.cc  bjvmdebug.cc  bktrans.cc  boostwrap.cc  boostwrap.h  brawchannel.cc  brawchannel.h  brawchannel_unix.cc  brawchannel_win32.cc  brawsocket.cc  brecsum.cc  brecsum.h  breset.cc  breset_libusb_1_0.cc  brimtrans.cc  bs11nread.cc  btarcmp.cc  btardump.cc  btool.cc  btranslate.cc  bvncrelay.cc  bwatch.cc  i18n.h  ktrans.cc  mimedump.h  platform.h  pppob.cc  (+4 more)
(+2082 files in other folders)
