PROJECT(bjdwp)


## Version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)


## Config
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(BJDWP_MAJOR_VERSION 0)
SET(BJDWP_MINOR_VERSION 1)
SET(BJDWP_PATCH_VERSION 0)

SET(BJDWP_VERSION ${BJDWP_MAJOR_VERSION}.${BJDWP_MINOR_VERSION}.${BJDWP_PATCH_VERSION})


## Pacakge
INCLUDE(FindPkgConfig)

###PKG_CHECK_MODULES(GTKMM REQUIRED gtkmm-2.4)
###PKG_CHECK_MODULES(GLADEMM REQUIRED libglademm-2.4)
PKG_CHECK_MODULES(BARRY REQUIRED libbarry-0)


## Output
IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
   FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/build/bin ${CMAKE_BINARY_DIR}/build/lib)
ENDIF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/build/bin)
MAKE_DIRECTORY(${OUTPUT_BINDIR})

SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/build/lib)
MAKE_DIRECTORY(${OUTPUT_LIBDIR})

SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_BINDIR})
SET(LIBRARY_OUTPUT_PATH ${OUTPUT_LIBDIR})


## Make the headers visible to everything
INCLUDE_DIRECTORIES(
	${bjdwp_SOURCE_DIR}/include
)


## Define targets as global
SET(LIB_JDWP_NAME barry-jdwp)
SET(LIB_UTIL_NAME barry-debug)
SET(PROG_BJDWP_NAME bjdwp)


## Define here global variables
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(utils)


